# pharma-game-theory

./: .gitignore  DEPLOYMENT.md  README.md  pyproject.toml
agents/: __init__.py  protocols.py  runner.py
data/: actor_snapshots.yaml  issues.yaml  positions.yaml  products.yaml  timeline.yaml
docs/: 404.html  actors.html  adversarial.html  ai-implications.html  black-swans.html  board-qa.html  bottom-line.html  briefing.html  calibration.html  ceo-talking-points.html  cross-domain-depth.html  cross-domain.html  decision-quality.html  disclosures.html  dynamics.html  financial-translation.html  folio.html  global-pricing.html  glossary.html  hatch-waxman.html  index.html  item-1.html  method.html  mfn-deals.html  one-pager.html  peer-comparison.html  playground.html  positions.html  prompts.html  real-options.html  recommendation-detail.html  recommendation.html  search-index.json  sensitivity.html  simulation.html  simulator.html  transcripts.html
memo/: __init__.py  adversarial-review.md  ai-implications.md  black-swans.md  board-qa.md  board-recommendation.md  bottom-line.md  calibration.md  ceo-talking-points.md  cross-domain-depth.md  cross-domain-strategy.md  decision-quality.md  disclosures-register.md  executive-briefing.md  financial-translation.md  generator.py  global-pricing-map.md  glossary.md  hatch-waxman.md  item-1-unpacked.md  mfn-deals-table.md  one-pager.md  peer-comparison.md  real-options.md  sensitivity.md  strategic-dynamics.md  template.md
model/: README.md  __init__.py  __main__.py  data.py  equilibria.py  payoffs.py  scenarios.py
(+35 files in other folders)
