[project]
name = "roche-game-theory"
version = "0.1.0"
description = "Game-theoretic simulation of mid-2026 Roche pharma-pricing negotiations"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "numpy>=1.26",
]

[project.optional-dependencies]
agents = [
    "anthropic>=0.40",
]
dev = [
    "pytest>=8.0",
    "markdown>=3.5",
]
site = [
    "markdown>=3.5",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["model", "agents", "novelty"]

[tool.pytest.ini_options]
testpaths = ["model/tests"]
